don't set vertical-align for checkbox/radio, fixes #3237
Closes #3237

Merge request studip/studip!2196

--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -225,10 +225,6 @@ form.default {
         }
     }
 
-    input[type=checkbox], input[type=radio] {
-        vertical-align: text-bottom;
-    }
-
     select[disabled] {
         background-color: var(--dark-gray-color-15);
     }
